# quant_trade

./: .gitignore  CLAUDE.md  README.md  launcher.py  pyproject.toml  quant_trade.spec  requirements.txt  run_backtest.py  run_gui.bat  run_live.py  setup.bat  setup.sh
config/: .env.example  settings.yaml
core_engine/: Cargo.toml
core_engine/src/: backtest.rs  bar_builder.rs  broker.rs  event.rs  lib.rs  metrics.rs  object.rs  risk.rs
docs/: phase0_setup.md  phase1_core_engine.md  phase2_data_layer.md  phase3_backtest_strategy.md  phase4_risk_gateways.md  phase5_monitor_deploy.md
scripts/: install_service.py  scheduler_setup.py
src/backtest/: engine.py  optimizer.py  report.py
src/core/: engine.py  object.py
src/data/: akshare_feed.py  base.py  crypto_feed.py  data_validator.py  database.py  tushare_feed.py
src/monitor/: dashboard.py  live_server.py  logger.py  notifier.py
src/monitor/live_ui/: index.html
src/risk/: manager.py  rules.py
src/strategy/: base.py  indicators.py
src/trading/: base_gateway.py  crypto_gateway.py  ctp_gateway.py  paper_gateway.py  xtp_gateway.py
src/utils/: calendar.py  config.py  helpers.py  keystore.py
strategies/: _template.py
tests/integration/: test_backtest_e2e.py
tests/unit/: test_akshare_panama.py  test_calendar.py  test_config.py  test_data_validator.py  test_database.py  test_indicators.py  test_keystore.py  test_ma_cross_strategy.py  test_momentum_rotation.py  test_paper_gateway.py  test_quant_core.py  test_risk_manager.py  test_strategy_base.py  test_symbol_registry.py
(+3 files in other folders)
